--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "firebase": "^12.7.0",
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-icons": "^5.5.0"
   },
   "devDependencies": {
+    "@types/react": "19.2.8",
     "eslint": "^9",
     "eslint-config-next": "16.1.1"
   }
