--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "@auth0/nextjs-auth0": "^4.14.0",
     "firebase": "^12.7.0",
+    "i18next": "^25.7.4",
+    "i18next-browser-languagedetector": "^8.2.0",
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-i18next": "^16.5.3",
     "react-icons": "^5.5.0"
   },
   "devDependencies": {
