--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^4.14.0",
+    "date-fns": "^4.1.0",
     "firebase": "^12.7.0",
     "i18next": "^25.7.4",
     "i18next-browser-languagedetector": "^8.2.0",
