--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-google-recaptcha": "^3.1.0",
     "react-i18next": "^16.5.3",
     "react-icons": "^5.5.0",
     "uuid": "^13.0.0"
